Further flailing