@@ -131,9 +131,15 @@
                     <archive>
                         <manifestEntries>
                             <Add-Opens>cactus.maven.plugin/*=ALL-UNNAMED</Add-Opens>
+                            <Add-Opens>cactus.maven.plugin/*=maven.core</Add-Opens>
+                            <Add-Opens>cactus.maven.plugin/*=maven.plugin.api</Add-Opens>
+                            <Add-Opens>cactus.maven.plugin/*=maven.settings</Add-Opens>
                             <Add-Opens>com.google.guice/*=ALL-UNNAMED</Add-Opens>
                             <Add-Exports>cactus.maven.plugin/*=ALL-UNNAMED</Add-Exports>
                             <Add-Exports>cactus.maven.plugin/*=com.google.guice</Add-Exports>
+                            <Add-Exports>cactus.maven.plugin/*=maven.core</Add-Exports>
+                            <Add-Exports>cactus.maven.plugin/*=maven.plugin.api</Add-Exports>
+                            <Add-Exports>cactus.maven.plugin/*=maven.settings</Add-Exports>
                         </manifestEntries>
                     </archive>
                 </configuration>
